2007-07-16  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-object.c (syx_class_lookup_method_binding): fixed to handle super messages
	(syx_class_lookup_method): idem
	All calls have been updated

	* syx/syx-lexer.c (_syx_lexer_token_string): support single apices into strings
	(_syx_lexer_token_binary): support for binary symbols up to 2 characters

	* st/kernel/initialDecl.st (ReadStream): added

	* st/kernel/Compiler.st: added

	* st/kernel/Float.st (*): added

	* st/kernel/String.st (asNumber): added

	* syx/syx-memory.c: save object->is_constant in the image

	* syx/syx-platform.h (syx_bswap_16): added
	(SYX_COMPAT_SWAP_16): added
	(SYX_COMPAT_SWAP_32): added

2007-07-15  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-platform.h (syx_bswap_32): wrap bswap_32

	* SConstruct (check_endianness): added to check endianness
	(byteswap.h): added for optional check

	* syx/syx-memory.c: first attempt for the image to be compatible with different endianness

	* src/SConscript: let it work on MacOSX (PPC)

	* plugins/gtk/SConscript: do not compile GTK if it's not found

	* st/kernel/Character.st: applied Sam Philips's patch that covers more ANSI

	* st/kernel/Number.st (reciprocal): added
	(asFraction): added
	(compare:): added

	* st/kernel/Integer.st (gcd:): added

	* st/kernel/Fraction.st (reduce): added
	(+): added
	(-): added
	(*): added
	(/): added
	(reciprocal): added refinement
	(compare:) added
	(<, >, <=, >=, =, ~=): added
	(zero): added

	* syx/syx-memory.c (syx_memory_gc_end): fixed GC transactions ending
	(syx_memory_gc): save/restore GC transaction state to hold #finalize messages

	* syx/syx-lexer.c (_syx_lexer_token_number): fixed small integer parsing

2007-07-14  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/LargeInteger.st (/): added
	(//): added
	(quo:): added

	* st/kernel/Number.st (//): added
	(quo:): refined

	* st/kernel/Float.st (/): added
	(floor): added
	(ceiling): added

	* st/kernel/Integer.st (radix:): added
	(printString): added
